--- a/public/templates/profile.mustache
+++ b/public/templates/profile.mustache
@@ -1,11 +1,1 @@
-{{#users}}
-<li class="span4">
-  <div class="thumbnail">
-    <img class="profile" src="#{{img}}" alt="#{{name}}">
-    <div class="caption">
-      <h3>{{name}}</h3>
-      <p>{{description}}</p>
-    </div>
-  </div>
-</li>
-{{/users}}
+TODO: Fill this file in :-)
